# AML

./: .env.template  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  test_debug.csv  test_final_verify.csv  test_final_verify.eval  test_verify_counts.csv  test_verify_counts.eval
clickhouse-config/: cluster.xml
common/aml-observability/: pyproject.toml
common/aml-observability/src/aml_observability/: __init__.py  _langfuse.py  _null.py  base.py
docs/: Technical_Spec.md  UI_Technical_Spec.md  basicRun.txt  progress.md  runbook.md  testing_instructions.md
scripts/: data_scrambler.py  delete_upload.py  evaluate_stage2.py  generate_stage1_fraud_data.py  generate_stage2_fraud_data.py  generate_triage_dataset.py  generate_upload_data.py  init_db.py  report_upload.py  retry_upload.py  run_eval.py  seed_db.py  test_generate_fraud_data.py  test_generate_upload_data.py  visualize_graph.py  workflow.mermaid
src/aml_workflow/: enrichment.py  graph.py  llm.py  nodes.py  observability.py  providers.py  services.py  state.py  triggers.py  validator.py
src/aml_workflow/eval/: __init__.py  completeness.py  hallucination.py
src/aml_workflow/models/: __init__.py  audit_log.py  enrichment_snapshot.py  rule.py  sar.py  transaction_status.py  upload_status.py  validation_result.py
src/aml_workflow/prompts/: loader.py  triage_stage2_system.txt  triage_stage3_system.txt  triage_system.txt  triage_user.txt
src/aml_workflow/rest/: audit.py  rules.py  sar.py  validation.py
src/bff/: alembic.ini  app.py  config.py  database.py  logger.py  schemas.py
src/core/: metrics.py  observability.py  schemas.py  utils.py
src/file_processor/: service.py
tests/: conftest.py  helpers.py
tests/eval/: test_completeness.py  test_eval_pipeline.py  test_generator.py  test_hallucination.py  test_triage_scenarios.py
ui/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
ui/src/: App.test.tsx  App.tsx
ui/test-results/: .last-run.json
(+147 files in other folders)
