[project]
name = "aml-observability"
version = "0.1.0"
description = "Shared observability abstraction for Langfuse / LangSmith"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
langfuse = ["langfuse>=4.6.1,<5.0.0", "langchain>=1.0.0"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
